# 10.22opencv

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conveyor_inspection_cli.cpp  formula_recognition.cpp  视觉组题目细则.docx
task1_conveyor_inspection/: CMakeLists.txt  HSV_TUNER_README.md  README.md  conveyor_inspector.cpp  conveyor_inspector.h  hsv_tuner.cpp  hsv_tuner_headless.cpp  main.cpp
task2_formula_recognition/: CLAUDE.md  CMakeLists.txt  README.md  formula_recognizer.cpp  formula_recognizer.h  main.cpp
